--- a/index.html
+++ b/index.html
@@ -4,133 +4,140 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>HNG_13 - Profile Card</title>
-		<link rel="stylesheet" href="index.css" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Playwrite+NL:wght@100..400&family=Poppins:wght@300;400;500;600&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@300;500&display=swap"
 			rel="stylesheet" />
+		<link rel="stylesheet" href="index.css" />
 	</head>
 	<body>
-		<header>
-			<nav>
-				<div class="left main-color">profile-card</div>
-			</nav>
-		</header>
-		<main>
-			<article>
-				<div class="profile-container" data-testid="test-profile-card">
-					<!-- Profile Section -->
-					<div class="profile-card">
-						<div class="profile-picture">
-							<figure class="profile-picture">
-								<img
-									src="main.jpg"
-									alt="Profile avatar"
-									data-testid="test-user-avatar" />
-							</figure>
-						</div>
-						<div class="profile-details">
-							<h2 data-testid="test-user-name" aria-label="name: Habib Lawal">
-								Habib Lawal
-							</h2>
-							<p class="job-title" data-testid="test-user-job-title">
-								Front-End Developer
-							</p>
-							<p class="short-bio" data-testid="test-user-bio">
-								Hello, I&apos;m a front-end developer with 4+ years of
-								experience, specializing in creating custom, pixel-perfect
-								websites with clean code and interactive animations.
-							</p>
-							<p class="current-location" data-testid="currentLocation">
-								Habib Lawal
-							</p>
-							<p class="email-address" data-testid="test-user-email">
-								lasszcodes@gmail.com
-							</p>
-							<div data-testid="test-user-social-links">
-								<nav class="social-links">
-									<a
-										href="#"
-										aria-label="Twitter"
-										data-testid="test-user-social-twitter"
-										rel="noopener noreferrer"
-										target="_blank"
-										><i class="fa-brands fa-twitter"></i
-									></a>
-									<a
-										href="https://github.com/Habiblassz"
-										target="_blank"
-										aria-label="GitHub"
-										data-testid="test-user-social-github"
-										rel="noopener noreferrer"
-										><i class="fa-brands fa-github"></i
-									></a>
-									<a
-										href="https://www.linkedin.com/in/habiblassz"
-										target="_blank"
-										aria-label="LinkedIn"
-										data-testid="test-user-social-linkedin"
-										rel="noopener noreferrer"
-										><i class="fa-brands fa-linkedin"></i
-									></a>
-								</nav>
-							</div>
-							<p class="current-time" data-testid="test-user-time"></p>
-						</div>
-					</div>
+		<article data-testid="test-profile-card">
+			<figure>
+				<img
+					data-testid="test-user-avatar"
+					src="main.jpg"
+					alt="Profile avatar" />
+			</figure>
 
-					<section class="interests-section" data-testid="test-user-hobbies">
-						<h2>My Hobbies</h2>
-						<ul class="interests-grid" data-testid="test-user-hobbies">
-							<li class="interest-card hobby-card">
-								<i class="fa-solid fa-code"></i>
-								<h3>Coding</h3>
-								<p>Building projects and exploring new technologies</p>
-							</li>
-							<li class="interest-card hobby-card">
-								<i class="fa-solid fa-book-open"></i>
-								<h3>Reading</h3>
-								<p>Tech blogs, fantasy novels, and personal development</p>
-							</li>
-						</ul>
-					</section>
+			<div class="profile-header">
+				<h2 data-testid="test-user-name">Habib Lawal</h2>
+				<p class="job-title" data-testid="test-user-job-title">
+					Front-End Developer
+				</p>
+				<p data-testid="test-user-bio">
+					Cybernetic interface designer &amp; neural network architect.
+					Specializing in quantum UI systems and holographic UX. Currently
+					hacking the mainframe of reality.
+				</p>
+				<p class="current-location" data-testid="currentLocation">
+					Kwara, Nigeria
+				</p>
+				<p class="email-address" data-testid="test-user-email">
+					lasszcodes@gmail.com
+				</p>
+				<p data-testid="test-user-time"></p>
 
-					<!-- Dislikes Section -->
-					<section class="interests-section" data-testid="test-user-dislikes">
-						<h2>My Dislikes</h2>
-						<ul class="interests-grid" data-testid="test-user-dislikes">
-							<li class="interest-card dislike-card">
-								<i class="fa-solid fa-file-exclamation"></i>
-								<h3>Poor Code</h3>
-								<p>Unclear or missing project documentation</p>
-							</li>
-							<li class="interest-card dislike-card">
-								<i class="fa-solid fa-bugs"></i>
-								<h3>Messy Code</h3>
-								<p>Unorganized and hard-to-read codebases</p>
-							</li>
-						</ul>
-					</section>
-				</div>
-			</article>
-		</main>
+				<nav data-testid="test-user-social-links">
+					<ul>
+						<li>
+							<a
+								href="https://twitter.com"
+								data-testid="test-user-social-twitter"
+								target="_blank"
+								rel="noopener noreferrer">
+								<svg
+									width="20"
+									height="20"
+									viewBox="0 0 24 24"
+									fill="none"
+									stroke="currentColor"
+									stroke-width="2"
+									stroke-linecap="round"
+									stroke-linejoin="round">
+									<path
+										d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a
+								href="https://github.com/Habiblassz"
+								data-testid="test-user-social-github"
+								target="_blank"
+								rel="noopener noreferrer">
+								<svg
+									width="20"
+									height="20"
+									viewBox="0 0 24 24"
+									fill="none"
+									stroke="currentColor"
+									stroke-width="2"
+									stroke-linecap="round"
+									stroke-linejoin="round">
+									<path
+										d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a
+								href="https://www.linkedin.com/in/habiblassz"
+								data-testid="test-user-social-linkedin"
+								target="_blank"
+								rel="noopener noreferrer">
+								<svg
+									width="20"
+									height="20"
+									viewBox="0 0 24 24"
+									fill="none"
+									stroke="currentColor"
+									stroke-width="2"
+									stroke-linecap="round"
+									stroke-linejoin="round">
+									<path
+										d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+									<rect x="2" y="9" width="4" height="12"></rect>
+									<circle cx="4" cy="4" r="2"></circle>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</nav>
+
+				<div class="section-divider"></div>
+
+				<section data-testid="test-user-hobbies">
+					<h3>Cyber Hobbies</h3>
+					<ul>
+						<li>Coding</li>
+						<li>Reading</li>
+						<li>Tech Exploration</li>
+						<li>Learning</li>
+					</ul>
+				</section>
+
+				<section data-testid="test-user-dislikes">
+					<h3>System Errors</h3>
+					<ul>
+						<li>Poor Code</li>
+						<li>Messy Code</li>
+						<li>Bad Documentation</li>
+						<li>Unreadable Code</li>
+					</ul>
+				</section>
+			</div>
+		</article>
+
 		<footer>
-			<p>
-				Created by <span data-testid="slackDisplayName">Lassz</span> |
-				<span data-testid="slackEmail" class="email-address"
-					>lasszcodes@gmail.com</span
-				>
-			</p>
+			<p>Created by <span data-testid="slackDisplayName">Lassz</span></p>
 			<p>
 				Today is <span class="day" data-testid="currentDay"></span> and the
 				current time is
 				<span class="time" data-testid="currentTimeUTC"></span>
 			</p>
 		</footer>
+
 		<script src="index.js"></script>
 	</body>
 </html>
