--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 		<link rel="stylesheet" href="index.css" />
 	</head>
 	<body>
+		<header class="page-header">
+			<nav class="main-nav">
+				<ul>
+					<li><a href="index.html" aria-current="page">Home</a></li>
+					<li><a href="about.html">About Me</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+				</ul>
+			</nav>
+		</header>
+
 		<article data-testid="test-profile-card">
 			<figure>
 				<img
@@ -138,6 +148,7 @@
 			</p>
 		</footer>
 
+		<script src="common.js"></script>
 		<script src="index.js"></script>
 	</body>
 </html>
